src/component/line_input/snapshots/envision__component__line_input__tests__snapshot_disabled.snap
---
source: src/component/line_input/tests.rs
assertion_line: 966
expression: terminal.backend().to_string()
---
┌──────────────────┐
│hello             │
└──────────────────┘
