src/component/line_input/snapshots/envision__component__line_input__tests__snapshot_unfocused.snap
---
source: src/component/line_input/tests.rs
assertion_line: 954
expression: terminal.backend().to_string()
---
┌──────────────────┐
│hello             │
└──────────────────┘
