src/component/line_input/snapshots/envision__component__line_input__tests__snapshot_wide_chars.snap
---
source: src/component/line_input/tests.rs
assertion_line: 1004
expression: terminal.backend().to_string()
---
┌──────────┐
│世 界 你 好 ab│
│          │
└──────────┘
