src/component/line_input/snapshots/envision__component__line_input__tests__snapshot_wrapped.snap
---
source: src/component/line_input/tests.rs
assertion_line: 991
expression: terminal.backend().to_string()
---
┌──────────┐
│hello worl│
│d!        │
│          │
└──────────┘
